--- a/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
+++ b/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
@@ -43,7 +43,7 @@
             formControlName="messageId"
             autocomplete="off"
           />
-          <app-validation-errors [form]="form" formControlName="messageId" />
+          <app-validation-errors [form]="form" controlName="messageId" />
         </c-col>
       </c-row>
 
