Paginated grid component

--- a/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
+++ b/src/AdminWeb/src/app/views/points/transactions/transactions-filter/transactions-filter.component.html
@@ -53,8 +53,8 @@
           <app-radio-group
             radioId="showMerged"
             [items]="[
-              { label: 'Aktivní', value: true },
-              { label: 'Archivované', value: false },
+              { label: 'Aktivní', value: false },
+              { label: 'Archivované', value: true },
             ]"
             formControlName="showMerged"
           />
