--- a/src/AdminWeb/src/app/views/points/transactions/transactions.component.html
+++ b/src/AdminWeb/src/app/views/points/transactions/transactions.component.html
@@ -1,1 +1,2 @@
-<app-transactions-filter />
+<app-transactions-filter (filterEvent)="list.onFilterChanged($event)" />
+<app-transactions-list #list />
