--- a/src/AdminWeb/src/app/layout/default-layout/default-layout.component.html
+++ b/src/AdminWeb/src/app/layout/default-layout/default-layout.component.html
@@ -62,7 +62,7 @@
   />
 
   <div class="body flex-grow-1">
-    <c-container breakpoint="lg" class="h-auto px-4">
+    <c-container class="h-auto px-4" fluid>
       <router-outlet />
     </c-container>
   </div>
