Fixed sizes in the dashboards

--- a/src/AdminWeb/src/app/views/dashboard/api/api-dashboard.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/api/api-dashboard.component.html
@@ -6,6 +6,7 @@
         <app-ag-grid
           [gridOptions]="gridOptions"
           [dataSource]="$privateApiDashboard"
+          [height]="'800px'"
         />
       </c-card-body>
     </c-card>
@@ -18,6 +19,7 @@
         <app-ag-grid
           [gridOptions]="gridOptions"
           [dataSource]="$publicApiDashboard"
+          [height]="'800px'"
         />
       </c-card-body>
     </c-card>
