Fixed user lookup binding

--- a/src/AdminWeb/src/app/components/lookups/user-lookup/user-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/user-lookup/user-lookup.component.html
@@ -5,6 +5,7 @@
     [items]="lookup.value"
     bindValue="id"
     bindLabel="username"
+    [formControl]="formControl"
   >
     <ng-template ng-option-tmp let-item="item" let-search="searchTerm">
       <div [title]="item.isBot ? 'BOT' : ''">
