Points statistics (via charts)

--- a/src/AdminWeb/src/app/views/dashboard/dashboard.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
           [ngTemplateOutlet]="dashboardWidget"
           [ngTemplateOutletContext]="{
             title: 'Bot spuštěn',
-            value: commonInfo.value!.startAt | date: 'dd. MM. yyyy HH:mm:ss',
+            value: commonInfo.value!.startAt | localeDatePipe,
             icon: 'cilPowerStandby',
             color: commonInfo.value!.isActive ? 'success' : 'danger',
           }"
