--- a/src/AdminWeb/src/app/views/dashboard/service-detail/service-detail.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/service-detail/service-detail.component.html
@@ -71,8 +71,7 @@
                 [ngTemplateOutlet]="detailInfoRow"
                 [ngTemplateOutletContext]="{
                   key: 'Měřeno od',
-                  value:
-                    response.value.measuredFrom | date: 'dd. MM. yyyy HH:mm:ss',
+                  value: response.value.measuredFrom | localeDatePipe,
                 }"
               />
             </c-card-body>
