--- a/src/AdminWeb/src/scss/styles.scss
+++ b/src/AdminWeb/src/scss/styles.scss
@@ -3,6 +3,7 @@
 // Lib styles
 @import "@coreui/coreui/scss/coreui";
 @import "bootstrap/dist/css/bootstrap.min.css";
+@import "@coreui/chartjs/scss/coreui-chartjs";
 
 @import 'ag-grid';
 @import 'ng-select';
