--- a/src/AdminWeb/src/app/components/loading/loading.component.html
+++ b/src/AdminWeb/src/app/components/loading/loading.component.html
@@ -1,7 +1,7 @@
 @if (visible()) {
   <div [ngClass]="containerClasses()">
     @if (small()) {
-      <c-spinner variant="grow" size="sm"></c-spinner>
+      <c-spinner [variant]="variant()" size="sm"></c-spinner>
 
       @if (showText()) {
         <p class="m-0 ms-2">
@@ -9,10 +9,10 @@
         </p>
       }
     } @else {
-      <c-spinner variant="grow"></c-spinner>
+      <c-spinner [variant]="variant()"></c-spinner>
 
       @if (showText()) {
-        <h2 class="ms-3 fw-light">
+        <h2 class="m-0 ms-3 fw-light">
           {{ customText() ? customText() : "Probíhá načítání" }}
         </h2>
       }
