--- a/src/AdminWeb/src/app/views/points/users/users-filter/users-filter.component.html
+++ b/src/AdminWeb/src/app/views/points/users/users-filter/users-filter.component.html
@@ -12,8 +12,7 @@
         <c-col cCol="auto" class="d-flex justify-content-end align-items-end">
           <app-filter-buttons
             [disabled]="form.invalid"
-            (onRefreshClick)="submitForm()"
-            (onResetClick)="resetFilter()"
+            [filterComponent]="this"
           />
         </c-col>
       </c-row>
