User measures list

--- a/src/AdminWeb/src/app/components/ag-grid/renderers/action-buttons-cell-renderer/buttons-cell-renderer.component.html
+++ b/src/AdminWeb/src/app/components/ag-grid/renderers/action-buttons-cell-renderer/buttons-cell-renderer.component.html
@@ -5,7 +5,7 @@
       [variant]="button.variant"
       [color]="button.color ?? 'transparent'"
       [size]="button.size ?? 'lg'"
-      class="text-decoration-underline"
+      class="text-decoration-underline pt-0 pb-0 mb-1"
       (click)="button.action(rowData)"
     >
       @if (button.icon) {
