--- a/src/AdminWeb/src/app/components/ag-grid/renderers/action-buttons-cell-renderer/buttons-cell-renderer.component.html
+++ b/src/AdminWeb/src/app/components/ag-grid/renderers/action-buttons-cell-renderer/buttons-cell-renderer.component.html
@@ -2,11 +2,13 @@
   @for (button of buttons; track button.id) {
     <button
       cButton
+      visibility
       [variant]="button.variant"
       [color]="button.color ?? 'transparent'"
       [size]="button.size ?? 'lg'"
       class="text-decoration-underline pt-0 pb-0 mb-1"
       (click)="button.action(rowData)"
+      [isVisible]="button.isVisible ? button.isVisible(rowData) : true"
     >
       @if (button.icon) {
         <svg cIcon name="{{ button.icon }}"></svg>
