Dropped support for old user measures

--- a/src/PrivateAdmin/src/app/administration/user-measures/user-measures-list/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/user-measures/user-measures-list/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <app-navigation [navigation]="navigation"></app-navigation>
 
 <common-dashboard>
-    <app-filter filter (filterChanged)="list.filterChanged($event)"></app-filter>
-    <app-list list #list></app-list>
+    <app-new-web-info
+        [text]="
+            'Seznam uživatelských opatření byl převeden do nové administrace.'
+        "
+    />
 </common-dashboard>
