--- a/src/PrivateAdmin/src/app/shared/card/card.component.html
+++ b/src/PrivateAdmin/src/app/shared/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card {{size}}" [ngClass]="classes" [ngStyle]="{'max-width': maxWidth}">
+<div class="card {{size}}" [ngClass]="classes">
     <div class="card-header" *ngIf="header" (click)="toggleVisiblity($event)">
         <div class="d-flex justify-content-between align-items-center">
             <h4>
