--- a/src/AdminWeb/src/app/views/reminder/reminder-list/reminder-list-list/reminder-list-list.component.html
+++ b/src/AdminWeb/src/app/views/reminder/reminder-list/reminder-list-list/reminder-list-list.component.html
@@ -9,15 +9,78 @@
 
 <c-modal #messageModal alignment="center" size="xl">
   <c-modal-header>
-    @if (messageModalRow) {
-      <h5 cModalTitle>Zpráva oznámení #{{ messageModalRow.id }}</h5>
-      <button cButtonClose (click)="messageModal.visible = false"></button>
+    @if (modalRow) {
+      <h5 cModalTitle>Zpráva oznámení #{{ modalRow.id }}</h5>
     }
+    <button cButtonClose (click)="messageModal.visible = false"></button>
   </c-modal-header>
 
   <c-modal-body>
     <c-alert class="mb-0 p-0" color="transparent">
-      <pre class="m-0 p-0 text-wrap">{{ messageModalRow?.message }}</pre>
+      <pre class="m-0 p-0 text-wrap">{{ modalRow?.message }}</pre>
     </c-alert>
   </c-modal-body>
+</c-modal>
+
+<c-modal #cancelModal alignment="center" size="lg">
+  <c-modal-header>
+    @if (cancelModalRow) {
+      <h5 cModalTitle>
+        Storno {{ cancelModalRow.notify ? "a oznámení" : "" }} upozornění.
+      </h5>
+    }
+
+    <button cButtonClose (click)="cancelModal.visible = false"></button>
+  </c-modal-header>
+
+  <c-modal-body>
+    @if (cancelModalRow?.notify) {
+      Opravdu si přejete předčasně odeslat upozornění a stornovat jej?
+    } @else {
+      Opravdu si přejete stornovat upozornění?
+    }
+
+    <table cTable bordered="true" class="mb-0 mt-3">
+      @if (cancelModalRow) {
+        <tr>
+          <th>ID</th>
+          <td>{{ cancelModalRow.row.id }}</td>
+        </tr>
+
+        <tr>
+          <th>Datum a čas oznámení</th>
+          <td>{{ cancelModalRow.row.notifyAtUtc | localeDatePipe }}</td>
+        </tr>
+
+        <tr>
+          <th>Zpráva</th>
+          <td>
+            <pre class="m-0 p-0 text-wrap">
+              {{ cancelModalRow.row.message }}
+            </pre>
+          </td>
+        </tr>
+      }
+    </table>
+  </c-modal-body>
+
+  <c-modal-footer>
+    <button
+      cButton
+      [variant]="'outline'"
+      [color]="'success'"
+      (click)="confirmCancel()"
+    >
+      Potvrdit
+    </button>
+
+    <button
+      cButton
+      [variant]="'outline'"
+      [color]="'danger'"
+      (click)="cancelModal.visible = false"
+    >
+      Zrušit
+    </button>
+  </c-modal-footer>
 </c-modal>
