--- a/src/PrivateAdmin/src/app/administration/reminders/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/reminders/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
-<common-dashboard>
-    <app-filter filter (filterChanged)="list.filterChanged($event)"></app-filter>
-    <app-list list #list></app-list>
-</common-dashboard>
+<div class="row m-0 pt-3">
+    <div class="col-md">
+        <app-new-web-info
+            [text]="'Reminder byl přesunut do nové administrace.'"
+        />
+    </div>
+</div>
