Toast notifications for errors

--- a/src/AdminWeb/src/app/layout/default-layout/default-layout.component.html
+++ b/src/AdminWeb/src/app/layout/default-layout/default-layout.component.html
@@ -63,6 +63,7 @@
 
   <div class="body flex-grow-1">
     <c-container class="h-auto px-4" fluid>
+      <c-toaster class="p-3" position="fixed" [placement]="'top-end'" />
       <router-outlet />
     </c-container>
   </div>
